Source/WebKit/UIProcess/API/glib/WebKitSettings.cpp
@@ -3910,9 +3910,9 @@ WebKitHardwareAccelerationPolicy webkit_settings_get_hardware_acceleration_polic
 
     WebKitSettingsPrivate* priv = settings->priv;
 #if USE(GTK4)
-    return priv->preferences->useHardwareBuffersForFrameRendering() ? WEBKIT_HARDWARE_ACCELERATION_POLICY_ALWAYS : WEBKIT_HARDWARE_ACCELERATION_POLICY_NEVER;
+    return priv->preferences->hardwareAccelerationEnabled() ? WEBKIT_HARDWARE_ACCELERATION_POLICY_ALWAYS : WEBKIT_HARDWARE_ACCELERATION_POLICY_NEVER;
 #else
-    if (!priv->preferences->useHardwareBuffersForFrameRendering())
+    if (!priv->preferences->hardwareAccelerationEnabled())
         return WEBKIT_HARDWARE_ACCELERATION_POLICY_NEVER;
 
     if (priv->preferences->forceCompositingMode())
@@ -3941,20 +3941,29 @@ void webkit_settings_set_hardware_acceleration_policy(WebKitSettings* settings, 
     case WEBKIT_HARDWARE_ACCELERATION_POLICY_ALWAYS:
         if (!HardwareAccelerationManager::singleton().canUseHardwareAcceleration())
             return;
-        if (!priv->preferences->useHardwareBuffersForFrameRendering()) {
-            priv->preferences->setUseHardwareBuffersForFrameRendering(true);
+
+        if (!priv->preferences->hardwareAccelerationEnabled()) {
+            priv->preferences->setHardwareAccelerationEnabled(true);
+            changed = true;
+        }
+
+        if (!priv->preferences->acceleratedCompositingEnabled() && HardwareAccelerationManager::singleton().acceleratedCompositingModeEnabled()) {
             priv->preferences->setAcceleratedCompositingEnabled(true);
             changed = true;
         }
-        if (!priv->preferences->forceCompositingMode()) {
+        if (priv->preferences->acceleratedCompositingEnabled() && !priv->preferences->forceCompositingMode()) {
             priv->preferences->setForceCompositingMode(true);
             priv->preferences->setThreadedScrollingEnabled(true);
             changed = true;
         }
         break;
     case WEBKIT_HARDWARE_ACCELERATION_POLICY_NEVER:
-        if (priv->preferences->useHardwareBuffersForFrameRendering() || priv->preferences->acceleratedCompositingEnabled()) {
-            priv->preferences->setUseHardwareBuffersForFrameRendering(false);
+        if (priv->preferences->hardwareAccelerationEnabled()) {
+            priv->preferences->setHardwareAccelerationEnabled(false);
+            changed = true;
+        }
+
+        if (priv->preferences->acceleratedCompositingEnabled()) {
             priv->preferences->setAcceleratedCompositingEnabled(false);
             changed = true;
         }
@@ -3967,13 +3976,12 @@ void webkit_settings_set_hardware_acceleration_policy(WebKitSettings* settings, 
         break;
 #if !USE(GTK4)
     case WEBKIT_HARDWARE_ACCELERATION_POLICY_ON_DEMAND:
-        if ((!priv->preferences->useHardwareBuffersForFrameRendering() || !priv->preferences->acceleratedCompositingEnabled()) && HardwareAccelerationManager::singleton().canUseHardwareAcceleration()) {
-            priv->preferences->setUseHardwareBuffersForFrameRendering(true);
+        if (!priv->preferences->acceleratedCompositingEnabled() && HardwareAccelerationManager::singleton().canUseHardwareAcceleration()) {
             priv->preferences->setAcceleratedCompositingEnabled(true);
             changed = true;
         }
 
-        if (priv->preferences->forceCompositingMode() && !HardwareAccelerationManager::singleton().forceHardwareAcceleration()) {
+        if (priv->preferences->forceCompositingMode() && !HardwareAccelerationManager::singleton().forceAcceleratedCompositingMode()) {
             priv->preferences->setForceCompositingMode(false);
             priv->preferences->setThreadedScrollingEnabled(false);
             changed = true;
